fix issue with button being overlapped by shadow

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -189,7 +189,7 @@ iframe{
     transition: all 0.2s;
     position: fixed;
     left: 0;
-    z-index: 100;
+    z-index: 99;
     top: 0;
     width: 200px;
     border-radius: 0 0 10px 0;
@@ -214,7 +214,7 @@ iframe{
     position: fixed;
     top: 0;
     left: 200px;
-    z-index: 99;
+    z-index: 100;
     font-size: 30px;
     color: white;
     background-color: red;
@@ -232,7 +232,7 @@ iframe{
 
   .smallarrowleft {
     transition: all 0.2s;
-    z-index: 100;
+    z-index: 101;
     position: fixed;
     top: 10px;
     left: 210px;
@@ -244,7 +244,7 @@ iframe{
   }
   .smallarrowright {
     transition: all 0.2s;
-    z-index: 100;
+    z-index: 101;
     position: fixed;
     top: 10px;
     left: 10px;
